[package]
name = "surge-pricing"
version = "0.1.0"
authors = ["noah lozevski <55212226+noahlozevski@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
hyper = { version = "0.14.25", features = ["full"] }
serde = "1.0.159"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
